--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "goit-react-hw-05-movies",
-  "homepage": "https://artem-bilodid.github.io/goit-react-hw-05-movies",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,7 +20,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "predeploy": "npm run build",
+    "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
     "extends": [
